force-app/main/default/objects/Contact/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>New Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>