force-app/main/default/objects/Contact/validationRules/Phone_Number_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_required</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(Phone) &gt; 10</errorConditionFormula>
    <errorMessage>Phone number is greater than 10</errorMessage>
</ValidationRule>