force-app/main/default/objects/Contact/validationRules/Phone_Size.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Size</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( Phone)&gt;10</errorConditionFormula>
    <errorMessage>Phone should be greater than 10</errorMessage>
</ValidationRule>